--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -19,7 +19,8 @@
     border-radius: 8px;
     width: 100%;
     transition: 0.5s ease-out;
-    color: #9e720a;
+    color: rgb(201, 82, 2);
+    font-weight: bold;
     font-size: 18px;
     font-weight: 100;
     border: 1px solid #9e720a;
@@ -28,14 +29,28 @@
 }
 
 .button__searchBar{
-    background: #fac038;
-    color: #201701;
-    border-radius: 5px;
+    background: #f5da9b;
+    color: rgb(201, 82, 2);
+    font-weight: bold;
+    border-radius: 12px;
     font-size: 15px;
-    font-weight: 100;
     border: none;
-    padding: 5px;
-    margin-left: 10px;
+    padding: 8px;
+    margin: 5px;
+    cursor: pointer;
+    transition: 0.5s ease-out;
+    border: 1px solid #9e720a;
+}
+
+.button__searchBar:hover{
+    background: rgb(238, 113, 30);
+    color: #f5da9b;
+    font-weight: bold;
+    border-radius: 12px;
+    font-size: 15px;
+    border: none;
+    padding: 8px;
+    margin: 5px;
     cursor: pointer;
     transition: 0.5s ease-out;
     border: 1px solid #9e720a;
@@ -54,13 +69,13 @@
 select{
     background: #f0d698;
     border-radius: 5px;
-    font-size: 18px;
-    font-weight: 100;
-    border: 1px solid #9e720a;
+    font-size: 15px;
+    border: 1px solid white;
     padding: 2px;
     text-align: center;
     margin-bottom: 10px;
-
+    color: rgb(201, 82, 2);
+    font-weight: bold;
 }
 
 /* cards */
@@ -73,7 +88,7 @@ select{
     background: #f0d698;
     border-radius: 10px;
     padding: 10px;
-    border: 1px solid #9e720a;
+    border: 1px solid #3B5BA7;
     cursor: pointer;
     width: 50%;
     margin: 0 auto;
@@ -88,15 +103,41 @@ select{
     display: block;
 }
 
-.card__title{
-    color: #201701;
+.card__title,
+.card__type{
+    color: rgb(201, 82, 2);
     text-align: center;
+    font-weight: bold;
+}
+ 
+.card__type{
+    font-weight: normal;
 }
 
 .link{
     text-decoration: none;
 }
 
+/* páginado*/
+
+
+.paginate__ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+}
+
+.paginate__li{
+    margin: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    background: rgb(221, 90, 3);
+    padding: 2px 6px;
+    color: #f7e7c4;
+    font-size: 12px;
+}
 
 @media (min-width: 768px) {
 
